# mcp-ynab

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
docs/: README.md
src/: __init__.py  config.py  main.py  ynab_client.py
tests/: __init__.py  test_config.py  test_main.py  test_ynab_client.py
